@@ -1,5 +1,5 @@
 .\"Text automatically generated by txt2man
-.TH TURN  "22 April 2013" "" ""
+.TH TURN  "25 April 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -175,6 +175,10 @@ STUN/TURN user password.
 .B
 \fB-W\fP
 TURN REST API authentication secret. Is not compatible with \fB-A\fP flag.
+.TP
+.B
+\fB-C\fP
+This is the username/timestamp separator symbol (character) in TURN REST API. The default value is ':'.
 .PP
 See the examples in the "examples/scripts" directory.
 .PP
